added mongoroutes and models and configured swagger
